Added integration with google error prone. Fixed bugs related to it.